[package]
name = "grpc-calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13"
tokio = { version = "1", features = ["full"] }
prost = "0.13"                                 # de/serialize into protobuf
tonic-reflection = "0.13"

[build-dependencies]
tonic-build = "0.13"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
