[package]
name = "grpc-calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13"                                     # gRPC framework
tokio = { version = "1", features = ["full"] }     # async runtime
prost = "0.13"                                     # de/serialize into protobuf
tonic-reflection = "0.13"                          # for gRPC reflection
axum = "0.8"
http = "1.3"                                       # for HTTP server
serde = { version = "1.0", features = ["derive"] } # for JSON serialization
serde_json = "1.0"                                 # for JSON serialization

[build-dependencies]
tonic-build = "0.13" # for compiling protobuf files
g2h = "0.4"          # for generating gRPC client and server code

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "http_server"
path = "src/http_server.rs"
